@@ -12,11 +12,12 @@ class Configuration:
     __name__ = 'account.configuration'
 
     def get_payment_journal(self, line):
-        pool = Pool()
-        PartyJournal = pool.get('account.payment.party_journal_relation')
-        relations = PartyJournal.search([
-                ('party', '=', line.party)
-                ], limit=1)
-        if relations:
-            return relations[0].journal
+        if hasattr(line, 'party'):
+            pool = Pool()
+            PartyJournal = pool.get('account.payment.party_journal_relation')
+            relations = PartyJournal.search([
+                    ('party', '=', line.party)
+                    ], limit=1)
+            if relations:
+                return relations[0].journal
         return super(Configuration, self).get_payment_journal(line)
