@@ -1,3 +1,5 @@
+* OTH#0000 Ajout d'un contrôle sur l'existence du tiers de la ligne
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
