@@ -1,3 +1,5 @@
+* OTH#0000 Add a check on the party of the line
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
